--- a/src/app/components/data-grid-form/data-grid-form.component.html
+++ b/src/app/components/data-grid-form/data-grid-form.component.html
@@ -1,5 +1,13 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <form [formGroup]="form">
+        <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef> Select </th>
+            <td mat-cell *matCellDef="let col">
+                <mat-checkbox></mat-checkbox>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
         <!-- Item Column -->
         <ng-container matColumnDef="{{ column.id }}" *ngFor="let column of tableConfig">
             <th mat-header-cell *matHeaderCellDef> {{ column.title }} </th>
